--- a/.github/workflows/Moseiik_test.yml
+++ b/.github/workflows/Moseiik_test.yml
@@ -2,7 +2,7 @@ name: MOSEIK_MULTI_ARCH
 
 on :
   push:
-    branches : [ main , V1]
+    branches : [main , V1]
   pull_request :
 jobs:
   test:
@@ -29,7 +29,7 @@ jobs:
       - name: BUILD_PAR_DOCKER
         run :  |
           docker buildx build \
-            --platform linux/${{matrix.arch]}}\   
+            --platform linux/${{matrix.arch}}\   
             -t moseiik:${{matrix.arch}}\
             --load .
       - name : EXECUTION_IMAGE
